网站初具雏形

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>政治与历史</title>
+  <title>政史频道</title>
   <link rel="stylesheet" href="asset/index.css">
+  <base target="_blank">
 </head>
 <body>
   <header>
-    <img src="asset/logo.jpg" alt="头像">
-    <h1>政史频道</h1>
+    <img src="asset/banner.jpg" alt="头图">
+    <input type="text" placeholder="在网页内存中搜索...">
   </header>
   <main>
     <aside>
@@ -24,7 +25,10 @@
     </article>
   </main>
   <footer>
-    <a href="https://t.me/politics_history">关注telegram频道</a>
+    <a href="contribute.md">投稿</a>
+    <a href="https://t.me/politics_history">TG频道</a>
+    <a>数字图书馆</a>
+    <a>友情链接</a>
   </footer>
 </body>
 <script src="asset/kit.js"></script>
