网站剪彩完工！

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </article>
   </main>
   <footer>
-    <a href="contribute.md">投稿</a>
+    <a href="https://github.com/creeperwater/ph/blob/main/contribute.md">投稿</a>
     <a href="https://t.me/politics_history">TG频道</a>
     <a>数字图书馆</a>
     <a>友情链接</a>
